<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/sample_map_pageTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_init" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sample_map_previous"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/previous_page" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sample_map_next"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/next_page" />

        <include layout="@layout/tip_button" />

    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sample_map_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sample_map_gridRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>