<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_close"
        android:src="@drawable/close"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="16dp" />

    <com.aka.mybox.LoginTest.view.LoginIconTextView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:Height="40dp"
        app:Width="120dp"
        app:left="@drawable/taiji" />

    <LinearLayout
        android:id="@+id/login_body"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_user"
                android:inputType="textVisiblePassword"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/color_gray"
                android:textColorHint="@color/color_gray"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/login_username_clean"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/color_white" />

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_password_flag" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_pass"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="@color/color_gray"
                android:textColorHint="@color/color_gray"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/login_password_clean"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/login_password_show"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/pass_gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10px"
            android:background="@color/color_white" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_login_bt_selected"
            android:text="@string/login_btn"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="10dp"
            android:text="@string/login_forget_pwd"
            android:textColor="@color/color_b0b8b2"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>